<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<packaging>pom</packaging>

	<modules>
		<module>web</module>
		<module>service</module>
        <module>integrationtest</module>
		<module>testreport</module>
		<module>documentation</module>
	</modules>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.5</version>
	</parent>
	<groupId>dk.kvalitetsit.hjemmebehandling-patient-bff</groupId>
	<artifactId>hjemmebehandling-patient-bff</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>hjemmebehandling-patient-bff</name>
	<description>KITHUGS service</description>

	<properties>
		<java.version>21</java.version>
		<testcontainers.version>1.20.4</testcontainers.version>
		<spring-prometheus-app-info-version>2.0.3</spring-prometheus-app-info-version>
		<hapi-fhir.version>7.4.5</hapi-fhir.version>
		<springdoc.version>2.8.5</springdoc.version>
		<gson-fire-version>1.9.0</gson-fire-version>
		<commons-lang3-version>3.12.0</commons-lang3-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.code.findbugs</groupId>
				<artifactId>jsr305</artifactId>
				<version>3.0.2</version>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>4.12.0</version>
			</dependency>

			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>logging-interceptor</artifactId>
				<version>4.12.0</version>
				<exclusions>
					<exclusion>
						<groupId>com.squareup.okhttp3</groupId>
						<artifactId>okhttp</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Modules in project -->
			<dependency>
				<groupId>dk.kvalitetsit.hjemmebehandling-patient-bff</groupId>
				<artifactId>service</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.hjemmebehandling-patient-bff</groupId>
				<artifactId>integrationtest</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.hjemmebehandling-patient-bff</groupId>
				<artifactId>web</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>io.gsonfire</groupId>
				<artifactId>gson-fire</artifactId>
				<version>${gson-fire-version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3-version}</version>
			</dependency>
			<!-- Logging -->
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>6.3</version>
			</dependency>

			<!-- Actuator and prometheus -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-prometheus-app-info</artifactId>
				<version>${spring-prometheus-app-info-version}</version>
			</dependency>

			<!-- Request ID logger -->
			<dependency>
				<groupId>dk.kvalitetsit</groupId>
				<artifactId>spring-request-id-logger</artifactId>
				<version>2.0.1</version>
			</dependency>

			<!-- hapi-fhir -->
            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-client</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>

			<!-- This has been added in order to cover the CVE below -->
			<!-- CVE-2024-47554 -->
			<dependency>
				<groupId>commons-io</groupId>
				<artifactId>commons-io</artifactId>
				<version>2.14.0</version>
			</dependency>

			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>3.0.0</version>
			</dependency>

            <dependency>
                <groupId>ca.uhn.hapi.fhir</groupId>
                <artifactId>hapi-fhir-structures-r4</artifactId>
                <version>${hapi-fhir.version}</version>
            </dependency>

			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.utilities</artifactId>
				<version>6.4.4</version>
			</dependency>

			<dependency>
				<groupId>ca.uhn.hapi.fhir</groupId>
				<artifactId>org.hl7.fhir.r4</artifactId>
				<version>6.4.4</version>
			</dependency>

			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version> ${springdoc.version}</version>
			</dependency>

			<!-- Code coverage -->
			<dependency>
				<groupId>org.jacoco</groupId>
				<artifactId>org.jacoco.agent</artifactId>
				<version>0.8.5</version>
			</dependency>

			<dependency>
				<groupId>io.swagger.core.v3</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>2.2.27</version>
			</dependency>


			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>java-jwt</artifactId>
				<version>3.8.3</version>
			</dependency>

			<dependency>
				<groupId>com.auth0</groupId>
				<artifactId>jwks-rsa</artifactId>
				<version>0.22.1</version>
			</dependency>

			<dependency>
				<groupId>org.openapitools</groupId>
				<artifactId>jackson-databind-nullable</artifactId>
				<version>0.2.6</version>
			</dependency>

			<dependency>
				<groupId>dk.kvalitetsit.hjemmebehandling-patient-bff</groupId>
				<artifactId>documentation</artifactId>
				<version>0.0.1-SNAPSHOT</version>
			</dependency>

		</dependencies>
	</dependencyManagement>

	<build>
		<finalName>${project.artifactId}</finalName>

		<plugins>
			<plugin>
				<groupId>pl.project13.maven</groupId>
				<artifactId>git-commit-id-plugin</artifactId>
				<version>4.0.0</version>
				<executions>
					<execution>
						<goals>
							<goal>revision</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<prefix>git</prefix>
					<dateFormat>dd.MM.yyyy '@' HH:mm:ss z</dateFormat>
					<verbose>true</verbose>
					<useNativeGit>false</useNativeGit>
					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					<skipPoms>false</skipPoms>
					<generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
					<failOnNoGitDirectory>false</failOnNoGitDirectory>
					<abbrevLength>7</abbrevLength>
					<offline>true</offline>
					<skip>false</skip>
					<gitDescribe>
						<skip>false</skip>
						<always>false</always>
						<dirty>-dirty</dirty>
						<forceLongFormat>false</forceLongFormat>
					</gitDescribe>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>

			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
